--- a/src/app/controlEquipos/mantenimiento-list/mantenimiento-list.component.css
+++ b/src/app/controlEquipos/mantenimiento-list/mantenimiento-list.component.css
@@ -20,15 +20,12 @@
   padding: 8px 12px;
   border: none;
   border-radius: 4px;
-  /* background-color: #007bff;*/
   color: white;
   cursor: pointer;
   margin-right: 5px;
 }
 
-/*.search-container button:hover {
-    background-color: #0056b3;
-  }*/
+
 .modal {
   display: flex;
   justify-content: center;
@@ -50,15 +47,13 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 
   width: 90%;
-  /* Más ancho */
+
   max-width: 800px;
-  /* Aumenta el ancho máximo */
+
   height: auto;
-  /* Altura automática */
+
   max-height: 80vh;
-  /* Limita la altura máxima al 80% del viewport */
   overflow-y: auto;
-  /* Agrega scroll si el contenido es muy largo */
   position: relative;
 }
 
@@ -352,17 +347,17 @@ textarea:focus {
 /* Estilos específicos para notificaciones de éxito */
 .notification.success {
   background-color: #28a745;
-  /* Verde */
+
   border-left: 5px solid #218838;
-  /* Borde izquierdo más oscuro */
+
 }
 
 /* Estilos específicos para notificaciones de error */
 .notification.error {
   background-color: #dc3545;
-  /* Rojo */
+
   border-left: 5px solid #c82333;
-  /* Borde izquierdo más oscuro */
+
 }
 
 /* Iconos opcionales para notificaciones */
@@ -391,12 +386,12 @@ textarea:focus {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  /* Fondo oscuro semi-transparente */
+
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 1000;
-  /* Asegura que esté por encima de otros elementos */
+
 }
 
 .modal-container {
@@ -446,36 +441,36 @@ textarea:focus {
 
 .btn-danger {
   background-color: #dc3545;
-  /* Rojo */
+
   color: #fff;
 }
 
 .btn-danger:hover {
   background-color: #c82333;
-  /* Rojo más oscuro */
+  
 }
 
 .btn-secondary {
   background-color: #6c757d;
-  /* Gris */
+
   color: #fff;
 }
 
 .btn-secondary:hover {
   background-color: #5a6268;
-  /* Gris más oscuro */
+  
 }
 
-/* --- Notifications Styling ) --- */
+/* --- Notifications --- */
 .notifications-container {
   position: fixed;
-  /* Or absolute if within a container */
+
   top: 10px;
-  /* Adjust position */
+
   right: 10px;
-  /* Adjust position */
+
   z-index: 1100;
-  /* Above modals */
+
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -493,18 +488,17 @@ textarea:focus {
 
 .notification.success {
   background-color: #28a745;
-  /* Green */
+
 }
 
 .notification.error {
   background-color: #dc3545;
-  /* Red */
+
 }
 
 .notification-icon {
   font-size: 1.2em;
   margin-right: 10px;
   display: inline-flex;
-  /* Use flex for centering icon */
   align-items: center;
 }
