--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,47 +1,46 @@
-<!DOCTYPE html>
-<html>
 <app-loading [loading]="loading"></app-loading>
 
-<head>
-  <title>Iniciar sesión</title>
-</head>
-
-<body>
-
-  <div *ngIf="!loading">
-    <div class="container">
-      <h2 id="Titulo1">SESEAZ</h2>
-      <p id="Titulo2">Sistema de Control de Equipos</p>
-      <form [formGroup]="loginForm">
-        <div class="form-group">
-          <label for="username">Username</label>
-          <input formControlName="username" type="text" id="username" name="username"
-            placeholder="Ingrese su nombre de usuario">
-          <div *ngIf="username.invalid && (username.dirty || username.touched)" class="text-danger">
-            <div *ngIf="username.hasError('required')">
-              El nombre de usuarioes requerido.
-            </div>
-            <div *ngIf="username.hasError('username')">
-              El formato del nombre de usuario es incorrecto.
-            </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="password">Contraseña</label>
-          <input type="password" id="password" name="password" formControlName="password"
-            placeholder="Ingrese su contraseña">
-          <div *ngIf="password.invalid && (password.dirty || password.touched)" class="text-danger">
-            <div *ngIf="password.hasError('required')">
-              La contraseña es requerida.
-            </div>
-          </div>
-        </div>
-        <div class="d-grid gap-2">
-          <button type="submit" class="btn btn-primary btn-efecto" (click)="login()">Iniciar sesión</button>
-        </div>
-      </form>
-    </div>
+<!-- Mensajes de éxito -->
+<!-- Contenedor de notificaciones -->
+<div class="notifications-container">
+  <!-- Notificación de éxito -->
+  <div *ngIf="mensajeExito" class="notification success">
+    <span class="notification-icon"></span>
+    {{ mensajeExito }}
   </div>
-</body>
+</div>
 
-</html>
+<div *ngIf="!loading">
+  <div class="container">
+    <h2 id="Titulo1">SESEAZ</h2>
+    <p id="Titulo2">Sistema de Control de Equipos</p>
+    <form [formGroup]="loginForm">
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input formControlName="username" type="text" id="username" name="username"
+          placeholder="Ingrese su nombre de usuario">
+        <div *ngIf="username.invalid && (username.dirty || username.touched)" class="text-danger">
+          <div *ngIf="username.hasError('required')">
+            El nombre de usuarioes requerido.
+          </div>
+          <div *ngIf="username.hasError('username')">
+            El formato del nombre de usuario es incorrecto.
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="password">Contraseña</label>
+        <input type="password" id="password" name="password" formControlName="password"
+          placeholder="Ingrese su contraseña">
+        <div *ngIf="password.invalid && (password.dirty || password.touched)" class="text-danger">
+          <div *ngIf="password.hasError('required')">
+            La contraseña es requerida.
+          </div>
+        </div>
+      </div>
+      <div class="d-grid gap-2">
+        <button type="submit" class="btn btn-primary btn-efecto" (click)="login()">Iniciar sesión</button>
+      </div>
+    </form>
+  </div>
+</div>
