--- a/src/app/controlEquipos/equipo-list/equipo-list.component.css
+++ b/src/app/controlEquipos/equipo-list/equipo-list.component.css
@@ -27,6 +27,7 @@
 }
 
 
+
 .modal {
   display: flex;
   justify-content: center;
@@ -41,6 +42,7 @@
 }
 
 .modal-content {
+   position: relative;
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
@@ -50,21 +52,22 @@
   height: auto;
   max-height: 80vh;
   overflow-y: auto;
-  position: relative;
 }
 
 .close {
   position: absolute;
   top: 10px;
-  right: 10px;
-  font-size: 24px;
+  right: 15px;
+  font-size: 1.5rem;
   cursor: pointer;
   color: #888;
+  z-index: 10;
 }
 
 .close:hover {
   color: #333;
 }
+
 
 h3 {
   margin-bottom: 20px;
@@ -256,6 +259,7 @@ select:focus {
 }
 
 .modal-container {
+  display: flex;
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
@@ -324,6 +328,7 @@ select:focus {
 
 
 /* --- Image Styling --- */
+
 .equipo-thumbnail {
   width: 50px;
 
@@ -426,3 +431,5 @@ select:focus {
   display: inline-flex;
   align-items: center;
 }
+
+
