--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,68 +1,183 @@
-<div class="form-container ">
-  <h2 class="form-title bi bi-person-plus"> Nuevo Usuario</h2>
+<div class="layout-container">
+  <app-sidebar></app-sidebar>
+  <div class="ps-3 pe-3 CONTENIDO content-container">
+    <div class="form-container">
+      <h2 class="form-title bi bi-person-plus"> Nuevo Usuario</h2>
 
-  <app-loading [loading]="loading"></app-loading>
-  <!-- Spinner de carga -->
+      <app-loading [loading]="loading"></app-loading>
+      <!-- Spinner de carga -->
 
-  <div class="d-flex justify-content-center align-items-center">
-
-    <!-- Botón para cerrar sesión -->
-    <button class="btn btn-danger m-3 bi bi-door-closed-fill" (click)="cerrarSesion()"> Salir</button>
-
-    <!-- Botón para ir al Dashboard -->
-    <button class="btn btn-primary m-3 bi bi-house-fill" (click)="irAlDashboard()"> Inicio</button>
-  </div>
-
+      <div class="d-flex justify-content-center align-items-center">
+        <!-- Botón para ir al Dashboard -->
+        <button class="btn btn-primary m-3 bi bi-house-fill" (click)="irAlDashboard()"> Inicio</button>
+      </div>
 
 
-  <div *ngIf="!loading">
+      <!-- Mensajes de éxito -->
+      <!-- Contenedor de notificaciones -->
+      <div class="notifications-container">
+        <!-- Notificación de éxito -->
+        <div *ngIf="mensajeExito" class="notification success">
+          <span class="notification-icon"></span>
+          {{ mensajeExito }}
+        </div>
 
-    <form [formGroup]="form" (ngSubmit)="register()" class="user-form">
-      <div class="form-group">
-        <label class="form-label">Usuario:</label>
-        <input type="text" formControlName="username" class="form-input"
-          [class.invalid]="form.get('username')?.invalid && form.get('username')?.touched" />
-        <div *ngIf="form.get('username')?.invalid && form.get('username')?.touched" class="error-message">
-          <i class="fas fa-exclamation-circle"></i> Campo obligatorio
+        <!-- Notificación de error -->
+        <div *ngIf="mensajeError" class="notification error">
+          <span class="notification-icon"></span>
+          {{ mensajeError }}
         </div>
       </div>
 
-      <div class="form-group">
-        <label class="form-label">Nombre:</label>
-        <input type="text" formControlName="firstName" class="form-input" />
-      </div>
 
-      <div class="form-group">
-        <label class="form-label">Apellido:</label>
-        <input type="text" formControlName="lastName" class="form-input" />
-      </div>
+      <div *ngIf="!loading">
 
-      <div class="form-group">
-        <label class="form-label">Contraseña:</label>
-        <input type="password" formControlName="password" class="form-input"
-          [class.invalid]="form.get('password')?.invalid && form.get('password')?.touched" />
-        <div *ngIf="form.get('password')?.invalid && form.get('password')?.touched" class="error-message">
-          <i class="fas fa-exclamation-circle"></i> Mínimo 6 caracteres
+        <form [formGroup]="form" (ngSubmit)="register()" class="user-form">
+          <div class="form-group">
+            <label class="form-label">Usuario:<span class="text-danger" title="Campo obligatorio">*</span></label>
+            <input type="text" formControlName="username" class="form-input"
+              [class.invalid]="form.get('username')?.invalid && form.get('username')?.touched" />
+            <div *ngIf="form.get('username')?.invalid && form.get('username')?.touched" class="error-message">
+              <i class="fas fa-exclamation-circle"></i> Campo obligatorio
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="form-label">Nombre:<span class="text-danger" title="Campo obligatorio">*</span></label>
+            <input type="text" formControlName="firstName" class="form-input" />
+          </div>
+
+          <div class="form-group">
+            <label class="form-label">Apellido:<span class="text-danger" title="Campo obligatorio">*</span></label>
+            <input type="text" formControlName="lastName" class="form-input" />
+          </div>
+
+          <div class="form-group">
+            <label class="form-label">Contraseña:<span class="text-danger" title="Campo obligatorio">*</span></label>
+            <input type="password" formControlName="password" class="form-input"
+              [class.invalid]="form.get('password')?.invalid && form.get('password')?.touched" />
+            <div *ngIf="form.get('password')?.invalid && form.get('password')?.touched" class="error-message">
+              <i class="fas fa-exclamation-circle"></i> Mínimo 6 caracteres
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="form-label">Rol:<span class="text-danger" title="Campo obligatorio">*</span></label>
+            <select formControlName="role" class="form-select">
+              <option *ngFor="let role of roles" [value]="role">{{ role }}</option>
+            </select>
+          </div>
+
+          <!-- <button type="submit" [disabled]="form.invalid" class="submit-btn">
+            Registrarse
+          </button> -->
+
+          <!-- Botón dinámico -->
+          <button class="btn btn-primary" type="submit" [disabled]="form.invalid">
+            {{ modoEdicion ? 'Actualizar Usuario' : 'Registrar Usuario' }}
+          </button>
+
+          <!-- Botón para cancelar la edición -->
+          <button *ngIf="modoEdicion" class="btn btn-secondary" type="button" (click)="cancelarEdicion()">
+            Cancelar
+          </button>
+
+
+        </form>
+
+        <div *ngIf="successMessage" class="alert success">
+          <i class="fas fa-check-circle"></i> {{ successMessage }}
+        </div>
+        <div *ngIf="errorMessage" class="alert error">
+          <i class="fas fa-exclamation-triangle"></i> {{ errorMessage }}
         </div>
       </div>
 
-      <div class="form-group">
-        <label class="form-label">Rol:</label>
-        <select formControlName="role" class="form-select">
-          <option *ngFor="let role of roles" [value]="role">{{ role }}</option>
-        </select>
-      </div>
 
-      <button type="submit" [disabled]="form.invalid" class="submit-btn">
-        Registrarse
-      </button>
-    </form>
-
-    <div *ngIf="successMessage" class="alert success">
-      <i class="fas fa-check-circle"></i> {{ successMessage }}
     </div>
-    <div *ngIf="errorMessage" class="alert error">
-      <i class="fas fa-exclamation-triangle"></i> {{ errorMessage }}
+    <div>
+      <!-- Tabla de personal -->
+      <table class="table table-striped m-3">
+        <thead>
+          <tr>
+            <th>Username</th>
+            <th>Nombre(s)</th>
+            <th>Apellidos</th>
+            <th>Rol</th>
+            <th>Acciones</th>
+          </tr>
+        </thead>
+        <tbody class="table-group-divider">
+
+          <tr *ngFor="let user of paginatedList">
+            <td>{{ user.username}}</td>
+            <td>{{ user.firstName }}</td>
+            <td>{{ user.lastName}}</td>
+            <td>{{ user.role}}</td>
+
+            <td>
+              <button *ngIf="isAdmin" class="btn btn-danger me-2 mb-2" (click)="eliminarUsuario(user.id!)">
+                <i class="bi bi-trash"></i>
+              </button>
+              <!-- ejemplo dentro de una fila de usuario -->
+              <button class="btn btn-sm btn-info me-2 mb-2" (click)="editarUsuario(user)">
+                <i class="bi bi-pencil"></i>  </button>
+
+
+
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+
+      <!-- Paginación -->
+
+
+      <div class="d-flex justify-content-between align-items-center mb-2">
+        <!-- Mostrar cantidad actual -->
+        <div>
+          Mostrando del {{ startIndex }} al {{ endIndex }} de {{ usersList.length }} elementos
+        </div>
+
+        <!-- Selector de elementos por página -->
+        <div class="d-flex align-items-center">
+          <label for="itemsPerPage" class="me-2 mb-0">Ver:</label>
+          <select id="itemsPerPage" [(ngModel)]="itemsPerPage" (change)="onItemsPerPageChange()"
+            class="form-select form-select-sm w-auto">
+            <option [value]="10">10</option>
+            <option [value]="15">15</option>
+            <option [value]="20">20</option>
+          </select>
+        </div>
+      </div>
+
+      <nav class="d-flex justify-content-center">
+        <ul class="pagination">
+          <li class="page-item" [class.disabled]="currentPage === 1">
+            <a class="page-link" (click)="prevPage()">Anterior</a>
+          </li>
+          <li class="page-item disabled">
+            <span class="page-link">Página {{ currentPage }} de {{ totalPages }}</span>
+          </li>
+          <li class="page-item" [class.disabled]="currentPage === totalPages">
+            <a class="page-link" (click)="nextPage()">Siguiente</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
+    <!-- Modal de confirmación para eliminar -->
+    <div *ngIf="isConfirmDeleteVisible" class="modal-overlay">
+      <div class="modal-container">
+        <span class="close-btn" (click)="cancelarEliminacionUsuario()">&times;</span>
+        <h3 class="modal-title">Confirmar Eliminación</h3>
+        <p>¿Estás seguro de que deseas eliminar este registro? Esta acción no se puede deshacer.</p>
+        <div class="modal-buttons">
+          <button class="btn btn-danger" (click)="confirmarEliminacionUsuario()">Eliminar</button>
+          <button class="btn btn-secondary" (click)="cancelarEliminacionUsuario()">Cancelar</button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
